[package]
name = "http-forward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "*", features = ["full"] }
http-body-util = "0.1.0-rc.2"
futures-util = "*"
uuid = { version = "*", features = ["v4", "fast-rng", "macro-diagnostics", ] }
http = "*"