[package]
name = "uncompress_str"
version = "0.1.0"
edition = "2021"
description="对字符串先进行base64转为字节后，通过gzip解压，最后转为字符串"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
miniz_oxide = "0.6.2"
flate2 = { version = "1.0.17" }